--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,25 @@
-<h1>这是一个能打代码的主页</h1>
-<h2>我们将在这里学习html</h2>
-<h3>这是不同大小的title, 我是h3</h3>
-<hr>
+<div class="web-background">
+  <div class="row">
+    <div class="col-6 offset-3 loginBox">
+        <div class="col-6 offset-3 loginBody">
+          <div class="loginBlank">
+            <P>username
+          </div>
+          <div class="loginBlank">
+            password
+          </div>
+          <div class="greenLoginButton">
+            Login
+          </div>
+          <div class="helperString1">
+            Not Register ?
+          </div>
+          <div class="helperString2">
+            Create an account
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+
+
